--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "swiper": "^8.2.2",
     "vue": "^3.2.25",
-    "vue-router": "^4.0.15"
+    "vue-router": "^4.0.15",
+    "vuetify": "^3.3.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
